# emfusion

./: CMakeLists.txt  EXAMPLE.md  README.md  eval_co-fusion.sh  eval_tum.sh  run_exps.sh
apps/: CMakeLists.txt  EM-Fusion.cpp  maskrcnn.in.py  preprocess_masks.cpp
config/: co-fusion-real.cfg  default.cfg  room4.cfg  tum.cfg
include/EMFusion/core/: EMFusion.h  MaskRCNN.h  ObjTSDF.h  TSDF.h  data.h
include/EMFusion/core/cuda/: EMFusion.cuh  ObjTSDF.cuh  TSDF.cuh  common.cuh
include/EMFusion/utils/: ImageReader.h  RGBDReader.h  TUMRGBDReader.h  data.h
src/: CMakeLists.txt
src/core/: EMFusion.cpp  MaskRCNN.cpp  ObjTSDF.cpp  TSDF.cpp
src/core/cuda/: EMFusion.cu  ObjTSDF.cu  TSDF.cu
src/utils/: ImageReader.cpp  RGBDReader.cpp  TUMRGBDReader.cpp
